# SAVIC

./: 000_SAVIC.ipynb  00_SAVIC-C.ipynb  00_SAVIC-C_tutorial.ipynb  00_SAVIC-P.ipynb  00_SAVIC-P_tutorial.ipynb  00_SAVIC-Q.ipynb  00_SAVIC-Q_tutorial.ipynb  00_SAVIC_Core.ipynb  00_SAVIC_CoreAlpha.ipynb  00_SAVIC_CoreBeam.ipynb  00_SAVIC_CoreBeamAlpha.ipynb  00_SAVIC_Input_Sort.ipynb  README.md  SAVIC_python_startup.py  conf.py  readme.md  readthedocs.yaml
Output/ML/models/: xgbc_sus_c.json  xgbr_ca_c1_a1_k1.json
Output/ML/models/GMM_C/: GMM_C_covariances.npy  GMM_C_means.npy  GMM_C_weights.npy
Output/ML/models/GMM_CA/: GMM_CA_covariances.npy  GMM_CA_means.npy  GMM_CA_weights.npy
docs/: .readthedocs.yaml  01-intro.rst  01-purpose.rst  02-structure-git.rst  02-structure-pypi.rst  03-functions-base.rst  03-functions-chain.rst  03-functions-savic.rst  03-functions-tutorial.rst  04-about-milunka.rst  05-version-history.rst  Latex_Refs.bib  conf.py  git-list.rst  index.rst  pypi-structure  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
source/: LICENSE  README.md  pyproject.toml
source/src/savic/: SAVIC.py  SAVIC_C_C.py  SAVIC_C_CA.py  SAVIC_C_CB.py  SAVIC_C_CBA.py  SAVIC_Core.py  SAVIC_CoreAlpha.py  SAVIC_CoreBeam.py  SAVIC_CoreBeamAlpha.py  SAVIC_Input_Sort.py  SAVIC_P_C.py  SAVIC_P_CA.py  SAVIC_P_CB.py  SAVIC_P_CBA.py  SAVIC_Q_C.py  SAVIC_Q_CA.py  SAVIC_Q_CB.py  SAVIC_Q_CBA.py  __init__.py  tutorial.py
tutorial/: SAVIC_testing.ipynb
(+7 files in other folders)
